--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@ Se heurtent longuement dans
 
 qui n’avez 
 
-<button class="tooltip" style="background-color:whitesmoke; color:indianred;"> plus de panse ! <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> Négation « plus de panse » prolongée par l'action de « quitter la chemise de peau ». Dénuement macabre, dépouillement qui est pire que la nudité. La peinture est faite pour choquer le bon goût bourgeois. Le vide, l'obscurité et le néant envahissent le tableau. </div></span></button> 
+<button class="tooltip" style="background-color:mistyrose; color:olive"> plus de panse ! <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> Négation « plus de panse » prolongée par l'action de « quitter la chemise de peau ». Dénuement macabre, dépouillement qui est pire que la nudité. La peinture est faite pour choquer le bon goût bourgeois. Le vide, l'obscurité et le néant envahissent le tableau. </div></span></button> 
 
 </br>
 
@@ -369,7 +369,7 @@ n’use sa sandale ! </br>
 
 Presque tous ont 
 
-<button class="tooltip" style="background-color:rgb(0, 74, 177); color:rgb(255, 54, 54);"> quitté la chemise de peau ; <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> Négation « plus de panse » prolongée par l'action de « quitter la chemise de peau ». Dénuement macabre, dépouillement qui est pire que la nudité. La peinture est faite pour choquer le bon goût bourgeois. Le vide, l'obscurité et le néant envahissent le tableau. </div></span></button> 
+<button class="tooltip" style="background-color:mistyrose; color:olive"> quitté la chemise de peau ; <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> Négation « plus de panse » prolongée par l'action de « quitter la chemise de peau ». Dénuement macabre, dépouillement qui est pire que la nudité. La peinture est faite pour choquer le bon goût bourgeois. Le vide, l'obscurité et le néant envahissent le tableau. </div></span></button> 
 
 Le </br>
 
@@ -428,11 +428,11 @@ Hurrah ! la bise siffle au grand
 
 funèbres Qui </br> 
 
-<button class="tooltip" style="background-color:whitesmoke; color:indianred;"> défilent, sournois, <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></button> 
+<button class="tooltip" style="background-color:rosybrown; color:royalblue;"> défilent, sournois, <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></button> 
 
 de leurs gros doigts cassés Un </br>
 
-<button class="tooltip" style="background-color:whitesmoke; color:indianred;"> chapelet d’amour  <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></button>
+<button class="tooltip" style="background-color:rosybrown; color:royalblue;"> chapelet d’amour  <span class="tooltiptext"><div class="div1"><img src=""></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></button>
 
 
 sur leurs pâles vertèbres : </br>
