--- a/index.html
+++ b/index.html
@@ -170,7 +170,10 @@ margin: 15px;
   grid-template-columns: 3em 9fr ;
   grid-gap: 10px;
 }
-
+.red{
+  background: linear-gradient(45deg, rgb(255, 61, 61) 12.5%, rgb(57,  57,  57) 12.5%, rgb(57,  57,  57) 37.5%, rgb(255, 61, 61) 37.5%, rgb(255, 61, 61) 62.5%, rgb(57,  57,  57) 62.5%, rgb(57,  57,  57) 87.5%, rgb(255, 61, 61) 87.5%);
+  background-size: 20px 20px;
+}
 @media screen and (max-width:1100px) {
 .intro{
 font-family: Impact,  Haettenschweiler,  'Arial Narrow Bold',  sans-serif; 
@@ -387,6 +390,8 @@ max-width: 50px;
 
  <div class="texte">
 
+  <!--red--> <div class="red">
+
 <div class="tooltip" style="background-color:cyan; color:rgb(0, 0, 0);"> Première strophe et dernière strophe <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/0.jpg"></div><div class="div2"> Le poème en alexandrins commence, et se termine avec des vers en octosyllabes. Refrain musicale de ballade. Contraste burlesque avec son thème. Echo avec la Ballade de Villon mais le titre montre une modernisation. </div></span></div> </br></br></br>
 
 Au <div class="tooltip" style="background-color:cyan; color:rgb(255, 138, 138);"> gibet <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/1.jpg"></div><div class="div2"> « Manchot aimable » le « gibet » n'a qu'un seul bras. Hypallage et personnification qui peuvent renvoyer avec ironie à un pendu amputé. « Aimable » parce qu'il libère les misérables de la souffrance, avec beaucoup d'ironie : il est au contraire détestable comme le montre l'antithèse avec l'adjectif « noir » ; retournement des valeurs </div></span></div> 
@@ -406,6 +411,7 @@ les paladins, Les </br>
 Les </br>
 
 <div class="tooltip" style="background-color:whitesmoke; color:indianred;"> squelettes de Saladins. <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/4.jpg"></div><div class="div2"> « Saladins » au pluriel désignerait les soldats de Saladin (ancien Sultan d'Égypte), on peut entendre « squelettes de Sarrazins ». Païens pour les chrétiens. </div></span></div> 
+
 
 </br></br>
 
@@ -447,6 +453,7 @@ Se heurtent longuement dans
 
 <div class="tooltip" style="background-color:whitesmoke; color:indianred;"> un hideux amour. <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/12.gif"></div><div class="div2"> « Hideux amour » est un oxymore, l'association de termes contradictoires. Cela souligne le fait qu'il n'y a pas d'amour dans ces gestes. Ce sont des personnages morts, malheureux et damnés. S'il y a eu amour, il est révolu. </div></span></div> 
 
+<!--red--> </div>
 
 </br> </br>
 
@@ -667,6 +674,10 @@ squelettes de Saladins. </br></br>
 
  <div class="tooltip" style="background-color: chartreuse; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color:indianred;">
     Procédés Littéraires et Stylistiques = 36
+</div>
+
+<div class="tooltip" style="background-color: lightcoral; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color:lightgreen;">
+  Procédés après coupure = 23
 </div>
 
 </br></br>
