--- a/index.html
+++ b/index.html
@@ -364,12 +364,12 @@ max-width: 50px;
               <p class="intro">
               ARTHUR RIMBAUD : - Jeune poète français précoce dès ses 15 ans </br>
                          - Il termine sa carrière à l'age de 21 ans </br>
-                         - Sa carrière est d'autant plus tragiques que ses poèmes, il terminera sa vie en étant un commdrçant voire même un traffiquant d'armes 
+                         - Sa carrière est d'autant plus tragiques que ses poèmes, il terminera sa vie en étant un commerçant voire même un traffiquant d'armes 
                         </br> </br>
               CAHIER DE DOUAI : - Dans ce reccueil il a rédigé une vingtaine de poème à l'âge de 15 ans </br>
                         - Grâce à ses relations avec d'autres écrivain, il confiera ses poème au poète Demeny  </br>
                         - D'abord désireux de se faire publier, mais demandera très vite de les brûler </br>
-                        - Mais Demeny ne les a pas bruler et au contraire les publié au nom de "Cahier de Douai" ou "Cahier de Demeny"
+                        - Mais Demeny ne les a pas brulé et au contraire les a publié au nom de "Cahier de Douai" ou "Cahier de Demeny"
                        </br> </br>
               PASSAGE : - Le Bal des Pendus est un des premiers poèmes de Rimbaud qui a pour origine un devoir scolaire. Rimbaud devait rédiger la lettre de Charles d'Orléans à Louis XI afin de demander la grâce du poête François Villon. Ce contexte historique est réel puisque cette personne est un poête du XV° siècle accusé du meurtre d'un prêtre. Rimbaud ne s'arrête pas à la lettre et écrit un poème qui reprend en le modernisant celui de Villon intitulé La Ballade des pendus. Le poème en rimes croisées est composé d'un quatrain en octosyllabes présent comme un refrain au début et à la fin et de neuf quatrains en alexandrins.
       
@@ -516,7 +516,7 @@ Sur les crânes, la neige applique
 
 </br></br>
 
-<div class="tooltip" style="background-color: black; color:indianred;"> Le corbeau fait panache <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/22.jpg"></div><div class="div2"> Sur la tête, les corbeaux « font panache » : Les charognards évoquent pour le poète les plumes des coiffures militaires, synonyme de bravoure (« preux » vers 24). L'humour noir du poète annoblit la brutalité du réel. Les cadavres ont le statut de personnages traditionnels de texté épiques. Le sujet trivial est traité sur un ton noble (registre héroicomique = inverse du burlesque) </div></span></div> 
+<div class="tooltip" style="background-color: black; color:indianred;"> Le corbeau fait panache <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/22.jpg"></div><div class="div2"> Sur la tête, les corbeaux « font panache » : Les charognards évoquent pour le poète les plumes des coiffures militaires, synonyme de bravoure (« preux » vers 24). L'humour noir du poète annoblit la brutalité du réel. Les cadavres ont le statut de personnages traditionnels de textes épiques. Le sujet trivial est traité sur un ton noble (registre héroicomique = inverse du burlesque) </div></span></div> 
 
 à ces têtes fêlées, </br>
 
@@ -525,13 +525,13 @@ Sur les crânes, la neige applique
 
 </br>
 
-<div class="tooltip" style="background-color:whitesmoke; color:indianred;"> On dirait, tournoyant dans les sombres mêlées, <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/24.jpg"></div><div class="div2"> La comparaison du mouvement des cadavres à des joutes médiévales fait aussi penser aux chorégraphies et aux mises en scène propre à la danse </div></span></div> 
+<div class="tooltip" style="background-color:rgb(75, 198, 255); color:rgb(96, 255, 154);"> On dirait, tournoyant dans les sombres mêlées, <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/24.jpg"></div><div class="div2"> La comparaison du mouvement des cadavres à des joutes médiévales fait aussi penser aux chorégraphies et aux mises en scène propre à la danse </div></span></div> 
 
 Des </br>
 
 <div class="tooltip" style="background-color: black; color:indianred;">  Preux, <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/22.jpg"></div><div class="div2"> Sur la tête, les corbeaux « font panache » : Les charognards évoquent pour le poète les plumes des coiffures militaires, synonyme de bravoure (« preux » vers 24). L'humour noir du poète annoblit la brutalité du réel. Les cadavres ont le statut de personnages traditionnels de texté épiques. Le sujet trivial est traité sur un ton noble (registre héroicomique = inverse du burlesque) </div></span></div> 
 
-<div class="tooltip" style="background-color:whitesmoke; color:indianred;"> raides, heurtant armures de carton. <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/25.jpg"></div><div class="div2"> La comparaison du mouvement des cadavres à des joutes médiévales fait aussi penser aux chorégraphies et aux mises en scène propre à la danse </div></span></div> 
+<div class="tooltip" style="background-color:rgb(75, 198, 255); color:rgb(96, 255, 154);"> raides, heurtant armures de carton. <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/25.jpg"></div><div class="div2"> La comparaison du mouvement des cadavres à des joutes médiévales fait aussi penser aux chorégraphies et aux mises en scène propre à la danse </div></span></div> 
 
  </br></br>
 
@@ -656,8 +656,8 @@ squelettes de Saladins. </br></br>
   - Rimbaud s'intéresse en particulier aux âmes damnés, ces hérétiques condamnés au gibet ont quelque chose qui le séduit. </br>
   - Jeune poète révolté, il réalise un poème provocateur. </br>
   - Mais grâce à la mise en abyme de l'art, toute cette démarche semble participer à l'élaboration d'une véritable poétique personnelle. </br>
-  - Le poète, dont les squelettes sont l'allégorie de sa liberté, est aussi une âme damnée, vivant une expérience festive, extrême, aux confins de la folie et de la mort. </br>
-               
+  - Le poète, dont les squelettes sont l'allégorie de sa liberté, est aussi une âme damnée, vivant une expérience festive, extrême, aux confins de la folie et de la mort. </br> </br>
+  
   Ouverture : 
   - Cette esthétique burlesque mêlant la dimension macabre de la mort à d'autres émotions se retrouve aujourd'hui chez un réalisateur comme Tim Burton. L'étrange M. Jack serait-il un avatar moderne du grand squelette fou de Rimbaud ? </br>
 
