--- a/index.html
+++ b/index.html
@@ -362,14 +362,14 @@ max-width: 50px;
 
            <img class="auteur" src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/arthur%20rimbaud.png">
               <p class="intro">
-              ARTHUR RIMBAUD : - Jeune poète français précoce dès ses 15 ans </br>
-                         - Il termine sa carrière à l'age de 21 ans </br>
-                         - Sa carrière est d'autant plus tragiques que ses poèmes, il terminera sa vie en étant un commerçant voire même un traffiquant d'armes 
-                        </br> </br>
-              CAHIER DE DOUAI : - Dans ce reccueil il a rédigé une vingtaine de poème à l'âge de 15 ans </br>
-                        - Grâce à ses relations avec d'autres écrivain, il confiera ses poème au poète Demeny  </br>
-                        - D'abord désireux de se faire publier, mais demandera très vite de les brûler </br>
-                        - Mais Demeny ne les a pas brulé et au contraire les a publié au nom de "Cahier de Douai" ou "Cahier de Demeny"
+                ARTHUR RIMBAUD : - Jeune poète français précoce dès ses 15 ans </br>
+                - Il termine sa carrière à l'âge de 21 ans </br>
+                - Sa carrière est d'autant plus tragiques que ses poèmes, il terminera sa vie en étant un commerçant voire même un traffiquant d'armes 
+               </br> </br>
+               CAHIER DE DOUAI : - Dans ce reccueil il a rédigé une vingtaine de poème à l'âge de 15 ans </br>
+               - Grâce à ses relations avec d'autres écrivain, il confiera ses poèmes au poète Demeny  </br>
+               - D'abord désireux de se faire publier, mais demandera très vite de les brûler </br>
+               - Mais Demeny ne les a pas brulé et au contraire les a publié au nom de "Cahier de Douai" ou "Cahier de Demeny"
                        </br> </br>
               PASSAGE : - Le Bal des Pendus est un des premiers poèmes de Rimbaud qui a pour origine un devoir scolaire. Rimbaud devait rédiger la lettre de Charles d'Orléans à Louis XI afin de demander la grâce du poête François Villon. Ce contexte historique est réel puisque cette personne est un poête du XV° siècle accusé du meurtre d'un prêtre. Rimbaud ne s'arrête pas à la lettre et écrit un poème qui reprend en le modernisant celui de Villon intitulé La Ballade des pendus. Le poème en rimes croisées est composé d'un quatrain en octosyllabes présent comme un refrain au début et à la fin et de neuf quatrains en alexandrins.
       
