--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@ max-width: 50px;
                 - Sa carrière est d'autant plus tragiques que ses poèmes, il terminera sa vie en étant un commerçant voire même un traffiquant d'armes 
                </br> </br>
                CAHIER DE DOUAI : - Dans ce reccueil il a rédigé une vingtaine de poème à l'âge de 15 ans </br>
-               - Grâce à ses relations avec d'autres écrivain, il confiera ses poèmes au poète Demeny  </br>
+               - Grâce à ses relations avec d'autres écrivains, il confiera ses poèmes au poète Demeny  </br>
                - D'abord désireux de se faire publier, mais demandera très vite de les brûler </br>
                - Mais Demeny ne les a pas brulé et au contraire les a publié au nom de "Cahier de Douai" ou "Cahier de Demeny"
                        </br> </br>
