--- a/index.html
+++ b/index.html
@@ -555,11 +555,11 @@ Hurrah ! la bise siffle au grand
 
 <div class="tooltip" style="background-color:whitesmoke; color:indianred;"> Holà, secouez-moi ces capitans <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/29.jpg"></div><div class="div2"> interjection ironiquement morale qui peut caricaturer le bourgeois choqué; le poète s'implique dans la scène et intervient pour donner un ordre à l'impératif. La deuxième personne du pluriel est imprécise et peut indirectement renvoyer au lecteur qui est impliqué dans la scène. Son rapport à la provocation du poème est interrogé. Les « capitans » sont des personnages littéraires comiques pour évoquer un cadavre (humour noir) </div></span></div> 
 
-funèbres Qui </br> 
+funèbres. Qui </br> 
 
 <div class="tooltip" style="background-color:rosybrown; color:royalblue;"> défilent, sournois, <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/30.jpg"></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></div> 
 
-de leurs gros doigts cassés Un </br>
+de leurs gros doigts cassés. Un </br>
 
 <div class="tooltip" style="background-color:rosybrown; color:royalblue;"> chapelet d’amour  <span class="tooltiptext"><div class="div1"><img src="https://raw.githubusercontent.com/ArjunaK07/Texte-9-Bal/main/30.jpg"></div><div class="div2"> » c'est un type particulier de chapelet, un fil avec des grains qui sont égrenés au fil des prières. « Défilent leurs vertèbres » : ils les font passer entre « leurs gros doigts cassés » exactement comme les grains d'un chapelet. « Sournois » dans leur rituel, les squelettes se montrent blasphémateurs. </div></span></div>
 
