--- a/index.html
+++ b/index.html
@@ -741,22 +741,20 @@ squelettes de Saladins. </br></br>
 
     </p>
 
-    </div>
-
+   </div>
     <h6 style="color: indianred; display: block; ">
-      ©©© • FAIT PAR ARJUNAA d'après les cours de Mr. Badelon • ©©©
+      ©©© • FAIT PAR MANY KARNAA d'après les cours de Mr. Badelon • ©©©
     </h6>
-
     <div class="source">
 
       <div class="intro_div">
-        <a href="https://arjunak07.github.io/Accueil-Premiere/"> <img class="logo_akatsuki" src="https://raw.githubusercontent.com/ArjunaK07/Reccueil-des-textes/main/logo%20akatsuki.png"> </a>
+        <img class="logo_akatsuki" src="https://raw.githubusercontent.com/ArjunaK07/Reccueil-des-textes/main/logo%20akatsuki.png">
       </div>
     
       <div class="outro_div">
-        <span class="OUTRO">
-          FAIT PAR L'AKATSUKI DES CODEURS, PROPULSÉ PAR LE LYCÉE ANDRÉ MALRAUX
-        </span>
+        <div class="OUTRO">
+      FAIT PAR MANY KARNAA, PROPULSÉ PAR LE LYCÉE ANDRÉ MALRAUX - MARS 2024
+      </div>
       </div>
       
     </div>
